# django-suggestion-box

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
example/: db.sqlite3
example/example/: settings.py  urls.py
suggestion_box/: admin.py  apps.py  models.py  urls.py  views.py
suggestion_box/migrations/: 0001_initial.py
suggestion_box/templates/: base.html
suggestion_box/templates/suggestion_box/: inbox.html  suggestion_details.html
